# Standard-Block-Comparison-Method

./: README.md  README_EN.md  app.py  pyproject.toml  whitepaper.md  whitepaper_en.md
.github/workflows/: publish.yml
methodology/: block_calculator.py  budget_distortion_analyzer.py  example_data.csv  google_sheets_script.js
prompts/: auditor_prompt.md
reports/: kashiwa_budget_distortion.md  kyoto_report_2025.md
sbcm/: sensitivity_analysis.py
