[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "standard-block-auditor"
version = "0.1.1"
description = "A quantitative framework for detecting budgetary distortion."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "seaborn>=0.11.0",
]

[project.scripts]
sbcm-calc = "sbcm.block_calculator:main"
sbcm-audit = "sbcm.budget_distortion_analyzer:main"
sbcm-verify = "sbcm.sensitivity_analysis:main"

[tool.setuptools]
packages = ["sbcm"]
